Fix toc overflow in right sidebar

--- a/quartz/quartz/styles/base.scss
+++ b/quartz/quartz/styles/base.scss
@@ -248,6 +248,22 @@ a {
       grid-area: grid-sidebar-right;
       margin-right: 0;
       flex-direction: column;
+      min-height: 0;
+      overflow-y: auto;
+      overscroll-behavior: contain;
+
+      & > .toc {
+        flex: 1 1 auto;
+        min-height: 0;
+        max-height: none;
+
+        & > .toc-content.overflow {
+          flex: 1 1 auto;
+          min-height: 0;
+          max-height: none;
+        }
+      }
+
       @media all and ($mobile) {
         margin-left: inherit;
         margin-right: inherit;
